# omim

./: .gitignore  README.md  configure.sh
3party/Alohalytics/: alohalytics.pro
3party/Alohalytics/snippets/: setup.py
3party/Alohalytics/src/: alohalytics.h  alohalytics_objc.h  messages_queue.h
3party/Alohalytics/tests/: test_messages_queue.cc  test_statistics_collection.cc
android/: AndroidManifest.xml  build.gradle  gradle.properties  multidex-config.txt  proguard-mwm.txt
android/UnitTests/: AndroidManifest.xml  build.gradle  runtests.py
android/UnitTests/jni/: mock.cpp
android/assets/: Sudan_East.mwm  Sudan_West.mwm  WorldCoasts.mwm
android/gradle/wrapper/: gradle-wrapper.properties
android/jni/: CMakeLists.txt
android/jni/com/mapsrahal/core/: jni_helper.cpp  logging.cpp
android/jni/com/mapsrahal/maps/: DisplayedCategories.cpp  DownloadResourcesLegacyActivity.cpp  Framework.cpp  LightFramework.cpp  LocationHelper.cpp  LocationState.cpp  MapFragment.cpp  MapManager.cpp  MwmApplication.cpp  PrivateVariables.cpp  SearchEngine.cpp  SearchEngine.hpp  SearchRecents.cpp  Sponsored.cpp  TrackRecorder.cpp  TrafficState.cpp  UserMarkHelper.cpp  UserMarkHelper.hpp  VideoTimer.cpp
android/jni/com/mapsrahal/maps/analytics/: ExternalLibrariesMediator.cpp
android/jni/com/mapsrahal/maps/bookmarks/data/: BookmarkManager.cpp
android/jni/com/mapsrahal/maps/discovery/: DiscoveryManager.cpp  Locals.cpp  Locals.hpp
android/jni/com/mapsrahal/maps/editor/: Editor.cpp  OpeningHours.cpp  OsmOAuth.cpp
android/jni/com/mapsrahal/maps/metrics/: UserActionsLogger.cpp
android/jni/com/mapsrahal/maps/onboarding/: Onboarding.cpp
android/jni/com/mapsrahal/maps/promo/: Promo.cpp  Promo.hpp
android/jni/com/mapsrahal/maps/routing/: RoutingOptions.cpp
android/jni/com/mapsrahal/maps/settings/: UnitLocale.cpp
android/jni/com/mapsrahal/maps/sound/: tts.cpp
android/jni/com/mapsrahal/maps/subway/: SubwayManager.cpp
android/jni/com/mapsrahal/maps/taxi/: TaxiManager.cpp
android/jni/com/mapsrahal/maps/ugc/: UGC.cpp
android/jni/com/mapsrahal/opengl/: androidoglcontextfactory.cpp  androidoglcontextfactory.hpp
android/jni/com/mapsrahal/platform/: GuiThread.cpp  HttpThread.cpp  HttpUserAgent.cpp  Language.cpp  Localization.cpp  PThreadImpl.cpp  Platform.cpp  SocketImpl.cpp
android/jni/com/mapsrahal/util/: Config.cpp  GeoUtils.cpp  HttpClient.cpp  HttpUploader.cpp  Language.cpp  LoggerFactory.cpp  NetworkPolicy.cpp  StringUtils.cpp
android/jni/com/mapsrahal/util/statistics/: PushwooshHelper.cpp
android/jni/com/mapsrahal/vulkan/: android_vulkan_context_factory.cpp  android_vulkan_context_factory.hpp
android/res/drawable/: bg_gradient.xml  bg_white_right_border.xml  button_corner.xml  circle.xml  ic_add.xml  ic_arrow_downward_black_24dp.xml  ic_arrow_drop_down.xml  ic_call_black_24dp.xml  ic_call_green_24dp.xml  ic_cancel_black_24dp.xml  ic_copyright.xml  ic_done_green_24dp.xml  ic_import_export_black_24dp.xml  ic_menu_black_24dp.xml  ic_minus_black.xml  ic_person_black_24dp.xml  ic_search_brown_24dp.xml  ic_seat.xml  ic_time.xml  int_bg.xml  ratingbar.xml  round_corner.xml  round_corner_button.xml  (+3 more)
android/res/drawable-hdpi/: splash_background.xml
android/script/: uninstall.sh
coding/coding_tests/: uri_test.cpp
data/: classificator.txt  copyright.html  faq.html  mapcss-mapping.csv  types.txt  visibility.txt  welcome.html
data/benchmarks/: update_benchmark.sh
data/strings/: strings.txt  types_strings.txt
docs/: INSTALL.md
drape/: gl_includes.hpp
editor/editor_tests/: xml_feature_test.cpp
iphone/Maps/: GoogleService-Info.plist  MAPSME.plist  maps.me dbg.entitlements
kml/kml_tests/: tests_data.hpp
map/: mwm_url.cpp  mwm_url.hpp  user.cpp
map/map_tests/: bookmarks_test.cpp  geourl_test.cpp  mwm_url_tests.cpp
platform/: http_thread_apple.mm  http_thread_qt.cpp  http_thread_tizen.cpp  platform_win.cpp
qt/res/: Info.plist.in
routing/: routing_callbacks.hpp
search/search_quality/: download-maps.sh
storage/storage_integration_tests/: test_defines.cpp
tools/android/: mapswithmetests.keystore
tools/autobuild/: debian-package.sh  send_mail.py
tools/kothic/: README
tools/python/: mwm_downloader.py
tools/python_tests/: permissions_test.py
tools/unix/: osm_grid_create.pl
xcode/qtMapsMe/: Info.plist
(+992 files in other folders)
